fixed screen overflow

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,7 +2,6 @@
 
 html,
 body {
-  width: 100vw;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 div, nav, section {
@@ -15,11 +14,5 @@ button {
   outline: none;
   &:hover {
     cursor: pointer;
-  }
-}
-
-.container {
-  @media (min-width: 1200px) {
-    max-width: 1200px !important;
   }
 }
